summative.moria.Moria.scala.error
Compilation error:
Moria:20: error: not found: value estSurbiscuit
  while (!estSurbiscuit)
          ^